# othello-web-app

./: .eslintrc.yml  .firebaserc  .gitignore  .lighthouserc.yml  .prettierignore  LICENSE  README.md  eslint.config.js  firebase.json  index.html  lighthouserc.yml  manifest.ts  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  lighthouse.yml
public/: privacy-policy.html
public/.well-known/: assetlinks.json
resources/: style.css
rust-othello/: Cargo.toml
rust-othello/src/: heuristic.rs  lib.rs
src/: ads.ts  database.ts  kaiads.v5.min.js  main.ts  pwa.ts  settings.ts  soft-keys.ts  style.css  theme-data.ts  themes.ts  utils.ts  vite-env.d.ts  worker.ts
src/elements/: theme-selector.css  theme-selector.ts
src/game/: alpha-beta-worker.ts  alpha-beta.ts  console-player.ts  game.ts  html-player.ts  random.ts
