[package]
name = "rust-othello"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = "0.4.1"
wasm-bindgen = "0.2.106"
